--- a/DocumentService/dockerfile
+++ b/DocumentService/dockerfile
@@ -3,11 +3,21 @@ FROM node:22-alpine
 RUN mkdir -p /documentService/app
 WORKDIR /documentService/app
 
-COPY package*.json /documentService/app
+# Copy package files first for better layer caching
+COPY package*.json ./
 
-RUN npm install
+# Install all dependencies (including devDependencies for TypeScript build)
+RUN npm ci
 
-COPY . /documentService/app
+# Copy source files and configuration
+COPY tsconfig.json ./
+COPY src/ ./src/
+
+# Build TypeScript to JavaScript
+RUN npm run build
+
+# Remove devDependencies to reduce image size
+RUN npm prune --production
 
 ENV PORT=8000
 EXPOSE 8000
